[package]
name = "hcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
monoio = { git = "https://github.com/bytedance/monoio" , default-features = false, features = ["async-cancel", "bytes", "iouring", "macros", "utils"] }
monoio-compat = { git = "https://github.com/bytedance/monoio" }
parking_lot = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
