[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "batch-forever"
path = "src/batch-forever.rs"