[package]
name = "hcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
monoio = { git = "https://github.com/bytedance/monoio", optional = true, default-features = false, features = ["async-cancel", "bytes", "iouring", "macros", "utils"] }
monoio-compat = { git = "https://github.com/bytedance/monoio", optional = true }
parking_lot = "0.12.1"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
glommio = { version = "0.7", optional = true }
futures-lite = { version = "1.12.0", optional = true }
num_cpus = { version = "1.13.1", optional = true }
lockfree-cuckoohash = { git = "https://github.com/datenlord/lockfree-cuckoohash", optional = true }
core_affinity = { version = "0.5.10", optional = true }
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring", optional = true }

[features]
default = ["tokio_local", "memory"]
glommio = ["dep:glommio", "dep:num_cpus", "dep:futures-lite"]
monoio = ["dep:monoio", "dep:monoio-compat", "dep:core_affinity"]
monoio_parser = ["dep:monoio", "dep:num_cpus"]
tokio = []
memory = ["dep:lockfree-cuckoohash"]
tokio_local = ["dep:core_affinity"]
tokio_uring = ["dep:tokio-uring"]

[[bin]]
name = "hcache"
path = "src/hcache.rs"
