[package]
name = "hcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
tarpc = { version = "0.29", features = ["full"] }
monoio = { git = "https://github.com/bytedance/monoio", optional = true, default-features = false, features = ["async-cancel", "bytes", "iouring", "macros", "utils"] }
monoio-compat = { git = "https://github.com/bytedance/monoio", optional = true }
parking_lot = "0.12.1"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
glommio = { version = "0.7" }
futures-lite = { version = "1.12.0" }
num_cpus = { version = "1.13.1" }
lockfree-cuckoohash = { git = "https://github.com/datenlord/lockfree-cuckoohash", optional = true }
core_affinity = { version = "0.5.10", optional = true }
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring" }

[features]
default = ["tokio_local", "memory"]
glommio = []
monoio = ["dep:monoio", "dep:monoio-compat", "dep:core_affinity"]
monoio_parser = ["dep:monoio"]
tokio = []
memory = ["dep:lockfree-cuckoohash"]
tokio_local = ["dep:core_affinity"]
tokio_uring = []

[[bin]]
name = "hcache"
path = "src/hcache.rs"

[[bin]]
name = "gendata"
path = "src/gendata.rs"